--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
         </tr>
         <tr>
             <td colspan="4"> <b>Metode Pembayaran: </b> <br>
-                <input type="checkbox" name="ATM"> Bank BCA
-                <input type="checkbox" name="ATM"> Bank BRI
-                <input type="checkbox" name="ATM"> GoPay
-                <input type="checkbox" name="ATM"> OVO 
-                <input type="checkbox" name="ATM"> DANA <br>
+                <input type="radio" name="Metode Pembayaran"> BCA
+                <input type="radio" name="Metode Pembayaran"> BRI 
+                <input type="radio" name="Metode Pembayaran"> Gopay 
+                <input type="radio" name="Metode Pembayaran"> OVO 
+                <input type="radio" name="Metode Pembayaran"> DANA
             </td>
         </tr>
         <tr>
